--- a/package.json
+++ b/package.json
@@ -4,54 +4,11 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
-    "@babel/core": "^7.16.0",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
-    "@svgr/webpack": "^5.5.0",
-    "@types/node": "^16.11.43",
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
     "antd": "^4.21.5",
-    "babel-loader": "^8.2.3",
-    "babel-plugin-named-asset-import": "^0.3.8",
-    "babel-preset-react-app": "^10.0.1",
-    "bfj": "^7.0.2",
-    "browserslist": "^4.18.1",
-    "camelcase": "^6.2.1",
-    "case-sensitive-paths-webpack-plugin": "^2.4.0",
-    "css-loader": "^6.5.1",
-    "css-minimizer-webpack-plugin": "^3.2.0",
-    "dotenv": "^10.0.0",
-    "dotenv-expand": "^5.1.0",
-    "file-loader": "^6.2.0",
-    "fs-extra": "^10.0.0",
-    "html-webpack-plugin": "^5.5.0",
-    "identity-obj-proxy": "^3.0.0",
-    "mini-css-extract-plugin": "^2.4.5",
-    "postcss": "^8.4.4",
-    "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-loader": "^6.2.1",
-    "postcss-normalize": "^10.0.1",
-    "postcss-preset-env": "^7.0.1",
-    "prompts": "^2.4.2",
     "react": "^18.2.0",
-    "react-dev-utils": "^12.0.1",
     "react-dom": "^18.2.0",
-    "react-refresh": "^0.11.0",
-    "react-router-dom": "^6.3.0",
-    "resolve": "^1.20.0",
-    "resolve-url-loader": "^4.0.0",
-    "sass-loader": "^12.3.0",
-    "semver": "^7.3.5",
-    "source-map-loader": "^3.0.0",
-    "style-loader": "^3.3.1",
-    "tailwindcss": "^3.0.2",
-    "terser-webpack-plugin": "^5.2.5",
-    "typescript": "^4.7.4",
-    "web-vitals": "^2.1.4",
-    "webpack": "^5.64.4",
-    "webpack-dev-server": "^4.6.0",
-    "webpack-manifest-plugin": "^4.0.2",
-    "workbox-webpack-plugin": "^6.4.1"
+    "react-i18next": "^11.18.0",
+    "react-router-dom": "^6.3.0"
   },
   "scripts": {
     "start": "node scripts/start.js",
@@ -84,13 +41,56 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.18.6",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
+    "@svgr/webpack": "^6.2.1",
     "@tailwindcss/line-clamp": "^0.4.0",
+    "@types/node": "^18.0.3",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
     "autoprefixer": "^10.4.7",
+    "babel-loader": "^8.2.5",
     "babel-plugin-import": "^1.13.5",
+    "babel-plugin-named-asset-import": "^0.3.8",
+    "babel-preset-react-app": "^10.0.1",
+    "bfj": "^7.0.2",
+    "browserslist": "^4.21.1",
+    "camelcase": "^7.0.0",
+    "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "cross-env": "^7.0.3",
+    "css-loader": "^6.7.1",
+    "css-minimizer-webpack-plugin": "^4.0.0",
     "cssnano": "^5.1.12",
+    "dotenv": "^16.0.1",
+    "dotenv-expand": "^8.0.3",
+    "file-loader": "^6.2.0",
+    "fs-extra": "^10.1.0",
+    "html-webpack-plugin": "^5.5.0",
+    "identity-obj-proxy": "^3.0.0",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
-    "webpackbar": "^5.0.2"
+    "mini-css-extract-plugin": "^2.6.1",
+    "postcss": "^8.4.14",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-loader": "^7.0.0",
+    "postcss-normalize": "^10.0.1",
+    "postcss-preset-env": "^7.7.2",
+    "prompts": "^2.4.2",
+    "react-dev-utils": "^12.0.1",
+    "react-refresh": "^0.14.0",
+    "resolve": "^1.22.1",
+    "resolve-url-loader": "^5.0.0",
+    "semver": "^7.3.7",
+    "source-map-loader": "^4.0.0",
+    "style-loader": "^3.3.1",
+    "tailwindcss": "^3.1.5",
+    "terser-webpack-plugin": "^5.3.3",
+    "typescript": "^4.7.4",
+    "web-vitals": "^2.1.4",
+    "webpack": "^5.73.0",
+    "webpack-dev-server": "^4.9.3",
+    "webpack-manifest-plugin": "^5.0.0",
+    "webpackbar": "^5.0.2",
+    "workbox-webpack-plugin": "^6.5.3"
   }
 }
