--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "antd": "^4.21.5",
+    "i18next": "^21.8.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^11.18.0",
+    "react-intl": "^6.0.5",
     "react-router-dom": "^6.3.0"
   },
   "scripts": {
