--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "browserslist": "^4.21.1",
     "camelcase": "^7.0.0",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
+    "compression-webpack-plugin": "^10.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^4.0.0",
