--- a/package.json
+++ b/package.json
@@ -29,9 +29,6 @@
     ]
   },
   "babel": {
-    "presets": [
-      "react-app"
-    ],
     "plugins": [
       [
         "import",
@@ -67,6 +64,7 @@
     "cssnano": "^5.1.12",
     "dotenv": "^16.0.1",
     "dotenv-expand": "^8.0.3",
+    "esbuild-loader": "^2.19.0",
     "file-loader": "^6.2.0",
     "fs-extra": "^10.1.0",
     "html-webpack-plugin": "^5.5.0",
@@ -86,9 +84,11 @@
     "resolve-url-loader": "^5.0.0",
     "semver": "^7.3.7",
     "source-map-loader": "^4.0.0",
+    "speed-measure-webpack-plugin": "^1.5.0",
     "style-loader": "^3.3.1",
     "tailwindcss": "^3.1.5",
     "terser-webpack-plugin": "^5.3.3",
+    "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
     "webpack": "^5.73.0",
     "webpack-dev-server": "^4.9.3",
