--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@ant-design/pro-components": "^1.1.15",
+    "@reduxjs/toolkit": "^1.8.4",
     "antd": "^4.21.5",
     "dayjs": "^1.11.4",
     "i18next": "^21.8.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^11.18.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0"
   },
   "scripts": {
