--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "i18next": "^21.8.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.5",
     "react-i18next": "^11.18.0",
     "react-router-dom": "^6.3.0"
   },
