--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "babel-preset-react-app": "^10.0.1",
     "bfj": "^7.0.2",
     "browserslist": "^4.21.1",
+    "cache-loader": "^4.1.0",
     "camelcase": "^7.0.0",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "compression-webpack-plugin": "^10.0.0",
@@ -73,6 +74,7 @@
     "dotenv-expand": "^8.0.3",
     "file-loader": "^6.2.0",
     "fs-extra": "^10.1.0",
+    "happypack": "^5.0.1",
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
     "less": "^4.1.3",
@@ -91,7 +93,7 @@
     "semver": "^7.3.7",
     "source-map-loader": "^4.0.0",
     "speed-measure-webpack-plugin": "^1.5.0",
-    "style-loader": "^3.3.1",
+    "style-loader": "^2.0.0",
     "tailwindcss": "^3.1.5",
     "terser-webpack-plugin": "^5.3.3",
     "ts-loader": "^9.3.1",
