--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@reduxjs/toolkit": "^1.8.4",
     "antd": "^4.21.5",
     "dayjs": "^1.11.4",
+    "http-proxy-middleware": "^2.0.6",
     "i18next": "^21.8.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
