--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "reset",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@ant-design/pro-components": "^1.1.15",
