--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,9 +11,9 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - name: Install Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
-          node-version: "16.x"
+          node-version: "16 "
       - name: Install pnpm
         run: npm i pnpm -g
       - name: Install dependencies
