--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dayjs": "^1.11.4",
     "http-proxy-middleware": "^2.0.6",
     "i18next": "^21.8.13",
+    "rc-picker": "^2.6.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
