--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
     "react-i18next": "^11.18.0",
+    "react-jwchat": "^1.2.1",
     "react-masonry-css": "^1.0.16",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0"
